--- a/recipe/styles.css
+++ b/recipe/styles.css
@@ -14,4 +14,11 @@ h1, p {
 .left {
   width: 600px;
   float: left;
+  margin-top: 20px;
+}
+
+.right {
+  width: 600px;
+  float: left;
+  margin-left: 30px;
 }
