Added stylings to ingredients and steps sections.

--- a/recipe/styles.css
+++ b/recipe/styles.css
@@ -18,7 +18,6 @@ a {
 .left {
   width: 600px;
   float: left;
-  margin-top: 20px;
 }
 
 .right {
@@ -28,8 +27,18 @@ a {
 }
 
 img {
+border-style: solid;
+border-width: thick;
+border-color: #a6ff00;
+border-radius: 10px;
+}
+
+.steps, .ingredients {
   border-style: solid;
   border-width: thick;
   border-color: #a6ff00;
   border-radius: 10px;
+  background-color: #FFC300;
+  padding: 30px;
+  margin-bottom: 15px;
 }
