--- a/recipe/styles.css
+++ b/recipe/styles.css
@@ -77,6 +77,7 @@ a:visited {
   flex-direction: column;
   align-items: left;
   margin: 15px;
+  min-width: 300px;
   max-width: 500px;
   padding: 30px;
   border: thick solid #a6ff00;
