--- a/recipe/styles.css
+++ b/recipe/styles.css
@@ -63,7 +63,7 @@ a:visited {
 
 .description {
   max-width: 600px;
-  min-width: 300px;
+  min-width: 350px;
 }
 
 .instructions-container {
@@ -80,7 +80,7 @@ a:visited {
   flex-direction: column;
   align-items: left;
   margin: 10px;
-  min-width: 300px;
+  min-width: 350px;
   max-width: 500px;
   padding: 30px;
   border: thick solid #a6ff00;
@@ -92,9 +92,17 @@ a:visited {
   text-decoration: line-through;
 }
 
+.hidden-links {
+  display: none;
+  flex-wrap: wrap;
+  list-style: none;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 #credit {
   max-width: 600px;
-  min-width: 300px;
+  min-width: 350px;
   margin-top: 10px;
   text-align: center;
 }
@@ -107,33 +115,9 @@ a:visited {
 
 /* mobile display structure */
 
-@media only screen and (max-width: 800px) {
-  /* flexbox */
-  /* .main-body {
-    flex-direction: column;
+@media only screen and (max-width: 991px) {
+  .hidden-links {
+    display: flex;
+    width: 100%;
   }
-
-  .main-body {
-    align-items: center;
-  }
-
-  .navbar {
-    justify-content: center;
-  }
-
-  img,
-  .description,
-  .blurb,
-  .ingredients,
-  .steps,
-  #credit {
-    width: 90vw;
-    min-width: 275px;
-  }
-
-  .blurb,
-  .instructions {
-    margin-bottom: 0;
-    max-width: 90vw;
-  } */
 }
