--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -9,7 +9,7 @@ body {
 
 .main-container {
   display: grid;
-  grid-template: 25% 25% 25% 25% / 25% 25% 25% 25%;
+  grid-template: 12.5% 12.5% 25% 12.5% 12.5% 25% / 25% 25% 25% 25%;
   column-gap: 5px;
   width: 90%;
   height: 90%;
@@ -20,7 +20,7 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 800;
 }
 
@@ -83,26 +83,37 @@ header {
 }
 
 .contact {
-  grid-area: 4 / 2 / 5 / 3;
-  justify-self: flex-start;
-  width: 225px;
-  height: 225px;
+  grid-area: 5 / 2 / 5 / 3;
+  display: flex;
+  width: 300px;
+  height: 300px;
   text-align: center;
+}
+
+#contact-header {
+  margin-top: 40px;
 }
 
 .contact-form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   flex-grow: 1;
 }
 
 #message {
   display: flex;
   flex-wrap: wrap;
-  max-height: 60%;
+  height: 50%;
+  margin: 10px;
+}
+
+#send {
+  width: 25%;
 }
 
 #about {
-  grid-area: 4 / 4 / 5 / 5;
+  grid-area: 7 / 4 / 5 / 5;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
