Added new display font.

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -16,7 +16,8 @@ body {
 }
 
 h1, h2, h3 {
-  font-family: "Julius Sans One", sans-serif;
+  font-family: "Bungee Inline", sans-serif;
+  color: #19454D;
 }
 
 h1 {
