--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -92,10 +92,9 @@ header {
 .projects {
   grid-area: 2 / 2 / 4 / 4;
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  margin-right: 100px;
+  justify-content: flex-end;
   text-align: right;
+  margin-left: 20%;
 }
 
 .contact {
@@ -154,4 +153,21 @@ header {
   border-radius: 100%;
   border: 4px solid #B6FFFB;
   background-color: #B6FFFB;
+}
+
+@media screen and (max-width: 1200px) {
+  .main-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .projects {
+    margin-left: 0px;
+  }
+
+  #about {
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+  }
 }
