--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -5,6 +5,7 @@ body {
   height: 100vh;
   width: 100vw;
   background-image: linear-gradient(#B6FFFB, #17BEBB, #19454D);
+  background-attachment: fixed;
 }
 
 .main-container {
