--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -36,8 +36,7 @@ h3 {
   text-decoration: none;
   font-weight: bold;
   color: #19454D;
-  text-shadow: -5px 5px 1px #F4857B,
-  -7px 10px 1px #FCDC5F;
+  text-shadow: -5px 5px 1px #F4857B;
 }
 
 a, ul, p, #send {
@@ -147,6 +146,8 @@ header {
   align-items: flex-end;
   text-align: right;
   color:#B6FFFB;
+  text-shadow: 0px 1px 0px #FCDC5F,
+  0px 2px 0px #F4857B;
 }
 
 #headshot {
@@ -170,5 +171,35 @@ header {
   #about {
     flex-direction: row-reverse;
     justify-content: flex-start;
+  }
+}
+
+@media screen and (max-width: 872px) {
+  .bubble {
+    background-color: inherit;
+    height: auto;
+  }
+
+  .projects {
+    text-align: center;
+  }
+
+  #contact-header {
+    margin: 0px;
+  }
+
+  #message {
+    height: 200px;
+    width: 150%;
+  }
+
+  #about {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  #headshot {
+    margin-bottom: 40px;
   }
 }
