Updated README and container size.

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -2,7 +2,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   width: 100vw;
   background-image: linear-gradient(#B6FFFB, #17BEBB, #19454D);
   background-attachment: fixed;
@@ -44,7 +43,7 @@ h3 {
   -7px 10px 1px #FCDC5F;
 }
 
-a, ul, p,form, #send {
+a, ul, p, form, #send {
   font-family: "M PLUS Code Latin", monospace;
 }
 
@@ -104,11 +103,12 @@ header {
 }
 
 .contact {
-  grid-area: 5 / 2 / 5 / 3;
+  grid-area: 5 / 1 / 5 / 3;
   display: flex;
   width: 350px;
   height: 350px;
   text-align: center;
+  margin-left: 25%;
 }
 
 #contact-header {
@@ -204,6 +204,10 @@ header {
 
   .projects {
     text-align: center;
+  }
+
+  .contact {
+    margin: 0px;
   }
 
   #contact-header {
