--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -1,25 +1,38 @@
-.main-container {
-  display: grid;
-  grid-template: 12.5% 12.5% 25% 25% 12.5% 50px / 50px 12.5% 25% 12.5% 25% 12.5% 50px;
-};
-
-/* body {
+body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
   background-image: linear-gradient(#B6FFFB, #17BEBB, #19454D);
   background-attachment: fixed;
 }
 
 .main-container {
   display: grid;
-  grid-template: 12.5% 12.5% 25% 12.5% 12.5% 25% / 25% 25% 25% 25%;
-  column-gap: 5px;
-  width: 90%;
-  height: 90%;
-  margin-bottom: 50px;
+  grid-template: 12.5% 12.5% 25% 25% 12.5% 12.5% / 6% 6% 25% 12.5% 25% 12.5% 6% 6%;
+  height: 100vh;
 }
+
+header {
+  grid-area: 1 / 2 / 2 / 7;
+}
+
+.bubble {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #B6FFFB;
+  border-radius: 100%;
+}
+
+.skills {
+  grid-area: 2 / 3 / 4 / 4;
+  width: 400px;
+  height: 400px;
+}
+
+/*
 
 h1 {
   font-family: "Bungee Shade", sans-serif;
@@ -58,21 +71,6 @@ ul {
   padding: 0;
 }
 
-header {
-  grid-area: 1 / 1 / 2 / 4;
-}
-
-.bubble {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-color: #B6FFFB;
-  border-radius: 100%;
-  margin: 20px;
-}
-
 .social-media {
   grid-area: 1 / 4 / 2 / 5;
   width: 300px;
@@ -90,13 +88,6 @@ header {
   border: thick solid #FCDC5F;
   border-radius: 100%;
   margin: 10px;
-}
-
-.skills {
-  grid-area: 2 / 1 / 4 / 2;
-  justify-content: flex-start;
-  width: 400px;
-  height: 400px;
 }
 
 .projects {
