--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -8,12 +8,12 @@ body {
 
 .main-container {
   display: grid;
-  grid-template: 12.5% 12.5% 25% 25% 12.5% 12.5% / 6% 6% 25% 12.5% 25% 12.5% 6% 6%;
-  height: 100vh;
+  /* grid-template: 12.5% 12.5% 25% 25% 6% 6% / 6% 6% 25% 12.5% 25% 12.5% 6% 6%; */
+  grid-template: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr
 }
 
 header {
-  grid-area: 1 / 2 / 2 / 8;
+  grid-area: 1 / 2 / 2 / 16;
 }
 
 .bubble {
@@ -27,22 +27,22 @@ header {
 }
 
 .skills {
-  grid-area: 2 / 3 / 4 / 4;
-  width: 400px;
-  height: 400px;
+  grid-area: 2 / 3 / 5 / 7;
+  width: 200px;
+  height: 200px;
 }
 
 .projects {
-  grid-area: 3 / 4 / 5 / 6;
+  grid-area: 3 / 7 / 7 / 13;
   display: flex;
   justify-content: flex-end;
   text-align: right;
 }
 
 .social-media {
-  grid-area: 2 / 6 / 4 / 7;
-  width: 300px;
-  height: 300px;
+  grid-area: 2 / 14 / 4 / 16;
+  width: 200px;
+  height: 200px;
 }
 
 .icon {
@@ -51,6 +51,37 @@ header {
   border: thick solid #FCDC5F;
   border-radius: 100%;
   margin: 10px;
+}
+
+.contact {
+  grid-area: 5 / 2 / 8 / 7;
+  width: 200px;
+  height: 200px;
+  /* display: flex;
+  width: 350px;
+  height: 350px;
+  text-align: center;
+  margin-left: 25%; */
+}
+
+#about {
+  grid-area: 6 / 7 / 8 / 16;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end; /*
+  text-align: right;
+  color:#B6FFFB;
+  text-shadow: 0px 1px 0px #FCDC5F,
+  0px 2px 0px #F4857B; */
+}
+
+
+#headshot {
+  width: 300px;
+  border-radius: 100%;
+  border: 4px solid #B6FFFB;
+  background-color: #B6FFFB;
 }
 
 /*
@@ -97,15 +128,6 @@ ul {
   justify-content: center;
 }
 
-.contact {
-  grid-area: 5 / 1 / 5 / 3;
-  display: flex;
-  width: 350px;
-  height: 350px;
-  text-align: center;
-  margin-left: 25%;
-}
-
 #contact-header {
   margin-top: 40px;
 }
@@ -148,25 +170,6 @@ ul {
   border: thick solid #FCDC5F;
   color: #B6FFFB;
   background-color: #19454D;
-}
-
-#about {
-  grid-area: 7 / 3 / 5 / 5;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: flex-end;
-  text-align: right;
-  color:#B6FFFB;
-  text-shadow: 0px 1px 0px #FCDC5F,
-  0px 2px 0px #F4857B;
-}
-
-#headshot {
-  width: 300px;
-  border-radius: 100%;
-  border: 4px solid #B6FFFB;
-  background-color: #B6FFFB;
 }
 
 @media screen and (max-width: 1400px) {
