--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -1,15 +1,14 @@
 body {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
   background-image: linear-gradient(#B6FFFB, #17BEBB, #19454D);
   background-attachment: fixed;
 }
 
 .main-container {
   display: grid;
-  /* grid-template: 12.5% 12.5% 25% 25% 6% 6% / 6% 6% 25% 12.5% 25% 12.5% 6% 6%; */
-  grid-template: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr
+  grid-template: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr / 2fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 2fr;
+  align-items: center;
 }
 
 header {
@@ -27,22 +26,22 @@ header {
 }
 
 .skills {
-  grid-area: 2 / 3 / 5 / 7;
-  width: 200px;
-  height: 200px;
+  grid-area: 2 / 3 / 4 / 6;
+  width: 400px;
+  height: 400px;
 }
 
 .projects {
-  grid-area: 3 / 7 / 7 / 13;
+  grid-area: 3 / 7 / 6 / 12;
   display: flex;
   justify-content: flex-end;
   text-align: right;
 }
 
 .social-media {
-  grid-area: 2 / 14 / 4 / 16;
-  width: 200px;
-  height: 200px;
+  grid-area: 1 / 14 / 4 / 16;
+  width: 300px;
+  height: 300px;
 }
 
 .icon {
@@ -55,8 +54,8 @@ header {
 
 .contact {
   grid-area: 5 / 2 / 8 / 7;
-  width: 200px;
-  height: 200px;
+  width: 500px;
+  height: 500px;
   /* display: flex;
   width: 350px;
   height: 350px;
@@ -65,20 +64,22 @@ header {
 }
 
 #about {
-  grid-area: 6 / 7 / 8 / 16;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: flex-end; /*
+  grid-area: 5 / 7 / 8 / 16;
+  display: grid; /*
   text-align: right;
   color:#B6FFFB;
   text-shadow: 0px 1px 0px #FCDC5F,
   0px 2px 0px #F4857B; */
 }
 
+#bio {
+  grid-area: 7 / 7 / 8 / 12;
+}
+
 
 #headshot {
-  width: 300px;
+  grid-area: 5 / 12 / 8 / 16;
+  width: 350px;
   border-radius: 100%;
   border: 4px solid #B6FFFB;
   background-color: #B6FFFB;
