--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -5,13 +5,33 @@ body {
   background-attachment: fixed;
 }
 
+h1 {
+  font-family: "Bungee Shade", sans-serif;
+  font-size: 40px;
+  font-weight: 800;
+}
+
+h2, h3 {
+  font-family: "Bungee Inline", sans-serif;
+  color: #19454D;
+}
+
+a, ul, p, form, #send {
+  font-family: "M PLUS Code Latin", monospace;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
 .main-container {
   display: grid;
   grid-template: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr / 2fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 2fr;
   align-items: center;
 }
 
-header {
+.title {
   grid-area: 1 / 2 / 2 / 16;
 }
 
@@ -27,8 +47,8 @@ header {
 
 .skills {
   grid-area: 2 / 3 / 4 / 6;
-  width: 400px;
-  height: 400px;
+  width: 450px;
+  height: 450px;
 }
 
 .projects {
@@ -38,10 +58,25 @@ header {
   text-align: right;
 }
 
+.project-display {
+  font-family: "Bungee Inline", sans-serif;
+  font-size: 30px;
+  text-decoration: none;
+  font-weight: bold;
+  color: #19454D;
+  text-shadow: -5px 5px 1px #F4857B,
+  -7px 10px 1px #FCDC5F;
+}
+
 .social-media {
   grid-area: 1 / 14 / 4 / 16;
   width: 300px;
   height: 300px;
+}
+
+.linked-icons {
+  display: flex;
+  justify-content: center;
 }
 
 .icon {
@@ -54,22 +89,64 @@ header {
 
 .contact {
   grid-area: 5 / 2 / 8 / 7;
+  display: flex;
   width: 500px;
   height: 500px;
-  /* display: flex;
-  width: 350px;
-  height: 350px;
   text-align: center;
-  margin-left: 25%; */
+}
+
+#contact-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
+}
+
+#contact-header {
+  margin-top: 40px;
+}
+
+#message {
+  display: flex;
+  flex-wrap: wrap;
+  resize: none;
+  height: 50%;
+  width: 110%;
+  margin: 10px;
+  border-radius: 5px;
+  border: thick solid #17BEBB;
+}
+
+#message:focus {
+  outline: 1px solid #FCDC5F;
+}
+
+#name {
+  resize: none;
+  border-radius: 5px;
+  border: thick solid #17BEBB;
+  margin: 10px;
+}
+
+#name:focus {
+  outline: 1px solid #FCDC5F;
+}
+
+#send {
+  width: 40%;
+  border-radius: 5px;
+  border: thick solid #FCDC5F;
+  color: #B6FFFB;
+  background-color: #19454D;
 }
 
 #about {
   grid-area: 5 / 7 / 8 / 16;
-  display: grid; /*
+  display: grid;
   text-align: right;
   color:#B6FFFB;
   text-shadow: 0px 1px 0px #FCDC5F,
-  0px 2px 0px #F4857B; */
+  0px 2px 0px #F4857B;
 }
 
 #bio {
@@ -84,95 +161,7 @@ header {
   border: 4px solid #B6FFFB;
   background-color: #B6FFFB;
 }
-
-/*
-
-h1 {
-  font-family: "Bungee Shade", sans-serif;
-}
-
-h2, h3 {
-  font-family: "Bungee Inline", sans-serif;
-  color: #19454D;
-}
-
-h1 {
-  font-size: 40px;
-  font-weight: 800;
-}
-
-h3 {
-  margin-top: 40px;
-}
-
-.project-display {
-  font-family: "Bungee Inline", sans-serif;
-  font-size: 30px;
-  text-decoration: none;
-  font-weight: bold;
-  color: #19454D;
-  text-shadow: -5px 5px 1px #F4857B,
-  -7px 10px 1px #FCDC5F;
-}
-
-a, ul, p, form, #send {
-  font-family: "M PLUS Code Latin", monospace;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-.links {
-  display: flex;
-  justify-content: center;
-}
-
-#contact-header {
-  margin-top: 40px;
-}
-
-#contact-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-grow: 1;
-}
-
-#message {
-  display: flex;
-  flex-wrap: wrap;
-  resize: none;
-  height: 30%;
-  margin: 10px;
-  border-radius: 5px;
-  border: thick solid #17BEBB;
-}
-
-#message:focus {
-  outline: 1px solid #FCDC5F;
-}
-
-#name {
-  resize: none;
-  border-radius: 5px;
-  border: thick solid #17BEBB;
-  margin-bottom: 10px;
-}
-
-#namee:focus {
-  outline: 1px solid #FCDC5F;
-}
-
-#send {
-  width: 40%;
-  border-radius: 5px;
-  border: thick solid #FCDC5F;
-  color: #B6FFFB;
-  background-color: #19454D;
-}
-
+/* 
 @media screen and (max-width: 1400px) {
   .main-container {
     display: flex;
