--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -161,21 +161,28 @@ ul {
   border: 4px solid #B6FFFB;
   background-color: #B6FFFB;
 }
-/* 
-@media screen and (max-width: 1400px) {
+
+@media screen and (max-width: 1300px) {
   .main-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
+    padding: 50px;
   }
 
-  .projects {
-    margin: 0px;
+  .contact {
+    margin-top: 30px;
   }
 
   #about {
+    display: flex;
     flex-direction: row-reverse;
     justify-content: flex-start;
+    align-items: center;
+  }
+
+  #bio {
+    margin: 0px 30px;
   }
 }
 
@@ -215,4 +222,4 @@ ul {
   #headshot {
     margin-bottom: 40px;
   }
-} */
+}
