Added basic styling to weather display.

--- a/weather-app/client/src/index.css
+++ b/weather-app/client/src/index.css
@@ -1,6 +1,7 @@
 body {
   background-image: url("./assets/desert-day.jpg");
-  background-size: 100vw auto;
+  background-size: auto 150vh;
+  background-repeat: no-repeat;
 }
 
 /* :root {
