--- a/weather-app/client/src/App.css
+++ b/weather-app/client/src/App.css
@@ -4,3 +4,16 @@
   flex-direction: column;
   align-items: center;
 }
+
+.display-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 70vw;
+  height: 60vh;
+  margin: 20px 0px 50px 0px;
+  border: thin solid black;
+  border-radius: 25px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+}
