--- a/weather-app/client/src/App.css
+++ b/weather-app/client/src/App.css
@@ -5,10 +5,17 @@
   align-items: center;
 }
 
+h1, h2, h3 {
+  font-family: "New Amsterdam", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .display-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
   width: 70vw;
   height: 60vh;
   margin: 20px 0px 50px 0px;
@@ -16,4 +23,19 @@
   border-radius: 25px;
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+}
+
+input {
+  border-radius: 5px;
+  margin: 0px 20px;
+}
+
+button {
+  border-radius: 5px;
 }
