--- a/slide-puzzle/client/src/index.css
+++ b/slide-puzzle/client/src/index.css
@@ -35,7 +35,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+button, input {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -46,11 +46,12 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+
+button:hover, input:hover {
   border-color: #646cff;
 }
 button:focus,
-button:focus-visible {
+button:focus-visible, input:focus, input:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
@@ -62,7 +63,7 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
+  button, input {
     background-color: #f9f9f9;
   }
 }
